--- a/trunk/docs/beleg1/pspec_bibtex.tex
+++ b/trunk/docs/beleg1/pspec_bibtex.tex
@@ -36,7 +36,7 @@
 \textbf{Voraussetzung}: -
 \begin{verbatim}
  BEGIN
-   Daten := Finde in Bibliothek Literatur mit Literatur.Literatur_Nr = \
+   Daten := Finde in Bibliothek Literatur mit Literatur.Literatur_Nr = 
               Exportanfrage.Literatur_Nr;
   
    IF gefunden THEN
