--- a/trunk/docs/beleg1/pspec_literaturverwaltung.tex
+++ b/trunk/docs/beleg1/pspec_literaturverwaltung.tex
@@ -39,9 +39,9 @@
 \textbf{Voraussetzung}: Benutzer ist angemeldet.
 \begin{verbatim}
  BEGIN
-   Setze in Bibliothek Literatur
-         mit Literatur.Literatur_Nr = Literaturnummer
-         auf Literaturdaten;
+   Setze in Bibliothek Literatur_Eintrag
+         mit Literatur_Eintrag.Literatur_Nr = Literatur.Literatur_Nr
+         auf Literatur;
   
    IF erfolgreich THEN
      Setze Bestätigung_Literaturändern
@@ -57,16 +57,20 @@
 \paragraph{Literatur\_löschen}
 \begin{tabular}[t]{p{9.5cm}ll}
 \textbf{Prozess}: Literatur\_löschen  	&\textbf{Datum}:      &21.04.2006\\
-					&\textbf{Bearbeiter}: &TODO\\
+					&\textbf{Bearbeiter}: &F. Wilhelm\\
 \end{tabular}
 
 \hrulefill\\
 \textbf{Voraussetzung}: Benutzer ist angemeldet.
 \begin{verbatim}
  BEGIN
-   Lösche in Bibliothek Literatur mit Literatur.Literatur_Nr = Literatur_Nr;
-   
+   Lösche in Bibliothek Literatur mit Literatur.Literatur_Nr = 
+                                      Literatur_Nr;
+
    IF erfolgreich THEN
+     Lösche in Kommentare Kommentar mit Kommentar.Literatur_Nr = 
+                                        Literatur_Nr
+
      Setze Bestätigung_Literaturlöschen
    ELSE
      Setze Fehler 203
