pspec_literaturverwaltung.tex in pspec_bibliotheksverwaltung.tex umbenannt teilmodell_literaturverwaltung.(eps|pdf) in teilmodell_bibliotheksverwaltung.(eps|pdf) umbenannt Fehlernummern sortiert ausserdem -> außerdem in Produktbeschreibung In teilmodell_bibliotheksverwaltung unnütze Tabelle Mitglieder entfernt In teilmodell_kommentarverwaltung Pfeil von _löschen und _anlegen vertauscht

--- a/trunk/docs/beleg1/funktionelle_anforderungen.tex
+++ b/trunk/docs/beleg1/funktionelle_anforderungen.tex
@@ -12,7 +12,7 @@ einem Webbrowser darauf zugreifen.
 \subsubsection*{Nutzergruppe}
 Es gibt 3 Nutzerebenen. Unregistrierte Nutzer k"onnen suchen und recherchieren,
 Mitglieder d"urfen Literatur hinzuf"ugen und kommentieren, und Administratoren
-d"urfen ausserdem noch Mitglieder verwalten.
+d"urfen außerdem noch Mitglieder verwalten.
 
 
 \section{Funktionelle Anforderungen}
@@ -63,7 +63,7 @@ Nr & Ereignis & Datenfluß im System & Antwort des Systems \\
 \includegraphics[scale=1.0]{teilmodell_literaturinformation}
 
 \paragraph{Teilmodell Literaturverwaltung}
-\includegraphics[scale=0.93]{teilmodell_literaturverwaltung}
+\includegraphics[scale=0.93]{teilmodell_bibliotheksverwaltung}
 
 \paragraph{Teilmodell Kommentarverwaltung}
 \includegraphics[scale=0.93]{teilmodell_kommentarverwaltung}
@@ -172,10 +172,10 @@ TODO:
 %\includegraphics[scale=0.5]{erd}
 
 \subsubsection{Prozessspezifikation}
+\input{pspec_bibliotheksverwaltung}
 \input{pspec_bibtex}
 \input{pspec_kommentarverwaltung}
 \input{pspec_literaturinformation}
-\input{pspec_literaturverwaltung}
 \input{pspec_mitgliederverwaltung}
 
 \subsection{Definition der Nutzerschnittstelle}
