- Setze navigation.png als umflossenes Bild an der rechten Seiten - Ersetze falsch gesetzte Anführungszeichen mit `` bzw. ''

--- a/trunk/docs/beleg1/funktionelle_anforderungen.tex
+++ b/trunk/docs/beleg1/funktionelle_anforderungen.tex
@@ -123,7 +123,7 @@ Login & Zeichenkette12 \\
 \hline
 Passwort & Zeichenkette12 \\
 \hline
-Rechte & ["Benutzer" $\mid "$Administrator"] \\
+Rechte & [``Benutzer'' $\mid $``Administrator``] \\
 \hline\hline
 
 Mitgliedsdaten & Name + Login + Passwort + Rechte \\
@@ -139,25 +139,25 @@ Suchbegriff & [Zeichenkette100 | (Art) + (Titel) + (Autor) + (ISBN) + (Jahr) + (
 Exportanfrage & Literatur\_Nr \textbf{BITTE UM VORSCHLÄGE/ÄNDERUNG} \\
 \hline\hline
 
-Bestätigung\_BibTeXImport & Literatur\_Nr + Zeichenkette "Importieren vorgenommen" \\
+Bestätigung\_BibTeXImport & Literatur\_Nr + Zeichenkette ''Importieren vorgenommen`` \\
 \hline
-Bestätigung\_Literaturanlegen & Literatur\_Nr + Zeichenkette "Anlegen vorgenommen" \\
+Bestätigung\_Literaturanlegen & Literatur\_Nr + Zeichenkette ''Anlegen vorgenommen`` \\
 \hline
-Bestätigung\_Literaturändern & Literatur\_Nr + Zeichenkette "Änderung vorgenommen" \\
+Bestätigung\_Literaturändern & Literatur\_Nr + Zeichenkette ''Änderung vorgenommen`` \\
 \hline
-Bestätigung\_Literaturlöschen & Literatur\_Nr + Zeichenkette "Löschen vorgenommen" \\
+Bestätigung\_Literaturlöschen & Literatur\_Nr + Zeichenkette ''Löschen vorgenommen`` \\
 \hline
-Bestätigung\_Kommentaranlegen & Kommentar\_Nr + Zeichenkette "Anlegen vorgenommen" \\
+Bestätigung\_Kommentaranlegen & Kommentar\_Nr + Zeichenkette ''Anlegen vorgenommen`` \\
 \hline
-Bestätigung\_Kommentarändern & Kommentar\_Nr + Zeichenkette "Änderung vorgenommen" \\
+Bestätigung\_Kommentarändern & Kommentar\_Nr + Zeichenkette ''Änderung vorgenommen`` \\
 \hline
-Bestätigung\_Kommentarlöschen & Kommentar\_Nr + Zeichenkette "Löschen vorgenommen" \\
+Bestätigung\_Kommentarlöschen & Kommentar\_Nr + Zeichenkette ''Löschen vorgenommen`` \\
 \hline
-Bestätigung\_Mitgliedanlegen & Mitglieds\_Nr + Zeichenkette "Anlegen vorgenommen" \\
+Bestätigung\_Mitgliedanlegen & Mitglieds\_Nr + Zeichenkette ''Anlegen vorgenommen`` \\
 \hline
-Bestätigung\_Mitgliedändern & Mitglieds\_Nr + Zeichenkette "Änderung vorgenommen" \\
+Bestätigung\_Mitgliedändern & Mitglieds\_Nr + Zeichenkette ''Änderung vorgenommen`` \\
 \hline
-Bestätigung\_Mitgliedlöschen & Mitglieds\_Nr + Zeichenkette "Löschen vorgenommen" \\
+Bestätigung\_Mitgliedlöschen & Mitglieds\_Nr + Zeichenkette ''Löschen vorgenommen`` \\
 \hline
 Literatur\_Info & Literatur + Kommentare \\
 \hline
@@ -198,12 +198,15 @@ F"ur die Eingabe wird ein vernetzter PC mit Tastatur und Maus vorrausgesetzt.\\
 Die Ausgabe erfolgt stets "uber einen Farbmonitor.
 \newpage
 \subsubsection{Navigationsleiste}
+\begin{floatingfigure}[r]{0.4\textwidth}
+\centering
 \includegraphics[scale=0.6]{navigation.png} 
+\end{floatingfigure}
 
 Diese Leiste findet man unabh"angig vom Inhalt immer auf der linken Seite.
-Unter {\bf Navigation} findet man die Unterpunkte "Literatur" und "Nutzer", die zu den entsprechenden Listen f"uhren.\\
+Unter {\bf Navigation} findet man die Unterpunkte ``Literatur'' und ``Nutzer'', die zu den entsprechenden Listen f"uhren.\\
 \\
-{\bf Suchen} erlaubt die Eingabe eines Suchbegriffes, mit dem Knopf "Suche" wird der Vorgang gestartet. 
+{\bf Suchen} erlaubt die Eingabe eines Suchbegriffes, mit dem Knopf ``Suche'' wird der Vorgang gestartet. 
 Das Ergebnis findet sich dann im Inhaltsbereich auf der rechten Seite.\\
 \\
 Zum {\bf Einloggen} gibt man seinen Nutzerkennzeichen und Passwort ein. Ist man bereits eingeloggt, ist hier der Nutzerstatus
