--- a/trunk/docs/beleg1/teilbeleg1.tex
+++ b/trunk/docs/beleg1/teilbeleg1.tex
@@ -11,6 +11,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{user} % eigene Befehle
 \usepackage{longtable}
+\usepackage{floatflt}
 
 \ifpdf
   \usepackage[ps2pdf]{thumbpdf}
