Einheitliches Nutzen von Umlauten in Nutzerschnittstellen

--- a/trunk/docs/beleg1/funktionelle_anforderungen.tex
+++ b/trunk/docs/beleg1/funktionelle_anforderungen.tex
@@ -183,15 +183,15 @@ TODO:
 Durch das Websystem ist die Nutzerschnittstelle beschr"ankt auf die Darstellung im Browser. Dadurch kann die Darstellung
 leicht bei verschiedenen Browser und Betriebssystemen variieren. Die Eingabefelder und Kn"opfe werden im Stil des 
 Betriebssystems dargestellt, sodass der Benutzer stets seine gewohnte Umgebung vorfinden kann. Ebenso kann man mittels der Optionen
-des Browser Schriftgr"osse und andere visuelle Einstellungen ver"andern. Das Grundlayout bleibt jedoch immer erhalten
-und richtet sich unter anderem auch nach der Gr"osse des ge"offneten Browserfensters.\\
+des Browser Schriftgr"o"se und andere visuelle Einstellungen ver"andern. Das Grundlayout bleibt jedoch immer erhalten
+und richtet sich unter anderem auch nach der Gr"o"se des ge"offneten Browserfensters.\\
 \\
-Das Layout teilt sich in einen Navigations/Uebersichtsteil auf der linken Seite der unabh"angig von der Auswahl immer
-zu sehen ist. Hier findet sich die Navigation, die Suchmaske fuer die Suchfunktion sowie Authentifikationsmaske zum Login.
-Auf der rechten, gr"osseren Seite befindet sich der Inhalt der aktuell aufgerufenen Funktion.\\
+Das Layout teilt sich in einen Navigations/"Ubersichtsteil auf der linken Seite der unabh"angig von der Auswahl immer
+zu sehen ist. Hier findet sich die Navigation, die Suchmaske f"ur die Suchfunktion sowie Authentifikationsmaske zum Login.
+Auf der rechten, gr"o"seren Seite befindet sich der Inhalt der aktuell aufgerufenen Funktion.\\
 \\
 Die Benutzung beginnt gew"ohnlich auf der Literaturliste (Startseite), jede Seite kann aber "uber direkte
-Ansteuerung mittels der Addresszeile des Browser oder auch Bookmarks abgerufen werden.\\
+Ansteuerung mittels der Adresszeile des Browser oder auch Bookmarks abgerufen werden.\\
 
 \subsubsection{Ein- und Ausgabegeräte}
 F"ur die Eingabe wird ein vernetzter PC mit Tastatur und Maus vorrausgesetzt.\\
@@ -215,13 +215,13 @@ und die M"oglichkeit zum Ausloggen zu finden.
 \includegraphics[scale=0.6]{index.png}
 
 Hier ist die verf"ugbare Literatur aufgelistet. Durch Klicken der Titel gelangt man zur Detailansicht f"ur 
-das jeweilige Buch. Mit dem Knopf am Ende der Liste (und entsprechenden Rechten) kann man Literatur hinzufuegen.
+das jeweilige Buch. Mit dem Knopf am Ende der Liste (und entsprechenden Rechten) kann man Literatur hinzuf"ugen.
 
 \subsubsection{Literaturdetails}
 \includegraphics[scale=0.6]{lit.png}
 
 Alle verf"ugbaren Information zum Buch werden hier aufgelistet. Hat man entsprechende Privilegien kann man auch
-Bearbeiten/l"oschen oder Kommentare hinzufuegen/l"oschen.
+Bearbeiten/l"oschen oder Kommentare hinzuf"ugen/l"oschen.
 
 \subsubsection{Suchergebnisse}
 \includegraphics[scale=0.6]{search.png}
