Nochmaliges modifizieren Qualitätsanforderung -> Nutzer und Integrität

--- a/trunk/docs/beleg1/qualitaetsanforderungen.tex
+++ b/trunk/docs/beleg1/qualitaetsanforderungen.tex
@@ -1,19 +1,19 @@
 \chapter{Spezifikation wichtiger Qualitätsanforderungen}
 \section{Benutzerbarkeit}
-Im wesentlichen existieren drei Arten von Nutzern:
+Im wesentlichen existieren drei Arten von Benutzern:
 
 \begin{enumerate}
- \item \textbf{Administrator:}
+ \item \textbf{Administrator:}\\
 Er ist im wesentlichen f\"ur die Mitgliedsverwaltung zust\"andig, also das Anlegen, \"Andern und L\"oschen von Mitgliedseintr\"agen. \\
 Des Weiteren k\"ummert er sich mit Hilfe der quelloffenen Basisprogramme um Datensicherungen. Eine gewisse Grundkenntnis im Umgang mit
 besagten Programmen ist also vorrausgesetzt.
 
- \item \textbf{Mitglied:}
-Nachdem man sich in der Literaturverwaltung registriert hat wird man zum Mitglied. Damit er\"offnen sich neue M\"oglichkeiten. \\
+ \item \textbf{Mitglied:}\\
+Nachdem man in der Literaturverwaltung registriert ist, wird man zum Mitglied und erh"alt neue Nutzerprivilegien. \\
 So kann man neue Literatur hinzuf\"ugen, ab\"andern und l\"oschen oder Kommentare \"uber Literatureintr\"age verfassen.
 
- \item \textbf{Nutzer:}
-Wenn man sich nicht registriert ist man in der Gruppe der Nutzer, diese Gruppe hat keine M\"oglichkeit auf den Datenbestand der Literaturverwaltung einzuwirken.\\
+ \item \textbf{Nutzer:}\\
+Wenn man sich nicht registriert, ist man in der Gruppe der Nutzer. Diese Gruppe hat keine M\"oglichkeit auf den Datenbestand der Literaturverwaltung einzuwirken.\\
 Die Rechte sind auf die Recherche beschr\"ankt, der Nutzer kann also B\"ucher suchen, ausw\"ahlen und sich die Beschreibungen und Kommentare ansehen.
 \end{enumerate}
 
@@ -25,7 +25,7 @@ Sollte es zur unbeabsichtigten L\"oschung oder Besch\"adigung von Daten kommen, 
 \section{Integrität}
 Auch wenn aktiv auf den Datenbestand eingewirkt werden kann, so ist dies jedoch ausschlie\ss lich registrierten Mitgliedern m\"oglich solche \"Anderungen vorzunehmen.
 Diese \"Anderungen k\"onnen auch vom Administrator bereinigt werden.\\
-Sollte es wiederholt zu sch\"adigenden Eingriffen seitens eines Mitglieds kommen, so ist der Adminstrator berechtigt betreffendes Mitgliedskonto samt aller Mitgliedsdaten zu l\"oschen.
+Sollte es wiederholt zu sch\"adigenden Eingriffen seitens eines Mitglieds kommen, so ist es dem Adminstrator möglich das betreffende Mitgliedskonto samt aller Mitgliedsdaten zu l\"oschen.
 
 \section{Flexibilität}
 Auch wenn zur Zeit keine Erweiterungen an der Literaturverwaltung geplant sind, ist es aufgrund der Sprache PHP dennoch m\"oglich \"Anderungen vorzunehmen.
