Korrektur der letzten Korrektur in funktionelle_anforderungen.tex

--- a/trunk/docs/beleg1/funktionelle_anforderungen.tex
+++ b/trunk/docs/beleg1/funktionelle_anforderungen.tex
@@ -230,7 +230,7 @@ Das Ergebnis der Suche ist eine Literaturliste und wird entsprechend genauso bed
 \subsubsection{Nutzerliste}
 \includegraphics[scale=0.6]{user.png}
 
-Hier werden alle Nutzer des Systems angezeigt, je nach du k"onnen auch die eigenen Daten oder andere
+Hier werden alle Nutzer des Systems angezeigt, je nach Privilegien k"onnen auch die eigenen Daten oder andere
 Daten modifiziert oder hinzugef"ugt werden.
 
 \subsubsection{Nutzer bearbeiten/hinzuf"ugen}
